Replace constructor use with valueOf()